fix: Исправлены переводы на страницах Правил и Политики конфиденциальности
- Заменены жестко закодированные тексты в pages/terms.vue и pages/privacy.vue
- Добавлены переводы для terms и privacy в i18n.config.ts и JSON файлы
- Исправлены мета-теги для SEO с использованием переводов
- Теперь заголовки страниц переводятся при переключении языка:
  - 'Правила участия' ↔ 'Қатысу ережелері'
  - 'Политика конфиденциальности' ↔ 'Құпиялылық саясаты'

--- a/locales/kk.json
+++ b/locales/kk.json
@@ -51,6 +51,16 @@
   "footer": {
     "copyright": "© 2025 Бизнес Camp. Барлық құқықтар қорғалған."
   },
+  "terms": {
+    "title": "Қатысу ережелері",
+    "metaTitle": "Қатысу ережелері - Бизнес Camp 2025",
+    "metaDescription": "Кәсіпкерлерге арналған конкурсқа қатысу ережелері"
+  },
+  "privacy": {
+    "title": "Құпиялылық саясаты",
+    "metaTitle": "Құпиялылық саясаты - Бизнес Camp 2025",
+    "metaDescription": "Құпиялылық саясаты және жеке деректерді өңдеу"
+  },
   "forms": {
     "name": "Аты",
     "email": "Email",
