--- a/locales/ru.json
+++ b/locales/ru.json
@@ -51,6 +51,16 @@
   "footer": {
     "copyright": "© 2025 Бизнес Camp. Все права защищены."
   },
+  "terms": {
+    "title": "Правила участия",
+    "metaTitle": "Правила участия - Бизнес Camp 2025",
+    "metaDescription": "Правила участия в конкурсе для предпринимателей"
+  },
+  "privacy": {
+    "title": "Политика конфиденциальности",
+    "metaTitle": "Политика конфиденциальности - Бизнес Camp 2025",
+    "metaDescription": "Политика конфиденциальности и обработки персональных данных"
+  },
   "forms": {
     "name": "Имя",
     "email": "Email",
